[package]
name = "caenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
toml = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
env_perm = "0.1.3"
dialoguer = "0.11.0"
dirs = "5.0.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"
[[bin]]
name = "b2-1"
path = "src/b2-1.rs"

[[bin]]
name = "b2-2"
path = "src/b2-2.rs"

[[bin]]
name = "b2-3"
path = "src/b2-3.rs"

[[bin]]
name = "b3-1"
path = "src/b3-1.rs"

[[bin]]
name = "b3-2"
path = "src/b3-2.rs"

[[bin]]
name = "b4-1"
path = "src/b4-1.rs"

[[bin]]
name = "b4-2"
path = "src/b4-2.rs"

[[bin]]
name = "b4-3"
path = "src/b4-3.rs"

[[bin]]
name = "b5-1"
path = "src/b5-1.rs"

[[bin]]
name = "b5-2"
path = "src/b5-2.rs"

[[bin]]
name = "b5-3"
path = "src/b5-3.rs"

[[bin]]
name = "b6-1"
path = "src/b6-1.rs"

[[bin]]
name = "b6-2"
path = "src/b6-2.rs"

[[bin]]
name = "b6-3"
path = "src/b6-3.rs"

[[bin]]
name = "b7-1"
path = "src/b7-1.rs"

[[bin]]
name = "env"
path = "src/env.rs"

[[bin]]
name = "question"
path = "src/question.rs"

[[bin]]
name = "profile"
path = "src/profile.rs"

[[bin]]
name = "hoge"
path = "src/hoge.rs"
