[package]
name = "caenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
toml = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
env_perm = "0.1.3"
dialoguer = "0.11.0"
dirs = "5.0.1"

